scrybe_frontend/src/pages/Pricing/Pricing.module.scss
@use "../../functions.scss" as *;

.pricing {
  margin-inline: auto;
}

.pricing .hero {
  background-color: #e6f0ff;
  padding: 1rem;
  min-height: 95vh;
  overflow-x: visible;
  margin-bottom: pix-rem(280);
  @include media(1220px) {
    min-height: pix-rem(840);
    margin-bottom: pix-rem(60);
    margin-inline: auto;
  }
}

.pricing .hero .container {
  width: min(100%, 75.25rem);
  margin-inline: auto;
  display: flex;
  justify-content: space-between;
  @include media(1220px) {
    margin-inline: auto;
    flex-direction: column;
    justify-content: center;
    & > * {
      text-align: center;
    }
  }
}

.pricing .hero .container .content {
  margin-top: 5.625rem;
  width: min(100%, 36rem);
  margin-inline: auto;
  @include media(1220px) {
    margin-bottom: pix-rem(40);
  }
}
.pricing .hero .container .content .heroH1 {
  font-size: 3rem;
  font-weight: bold;
  color: #313131;
  line-height: 1.3;
  @include media(1220px) {
    font-size: pix-rem(40);
  }
}
.pricing .hero .container .content .heroText {
  margin-top: 0.5rem;
  font-size: 1.25rem;
  font-weight: 600;
  @include media(1220px) {
    font-size: pix-rem(20);
  }
}
.pricing .hero .container .content .heroAccent {
  color: #006cff;
}
.pricing .hero .container .heroImage {
  width: min(100%, 38.3125rem);
  margin-inline: auto;
}

.pricing .hero .curves {
  position: absolute;
  top: pix-rem(-160);
  left: 0;
  right: 0;
  width: 100%;
  z-index: -1;
  height: pix-rem(830);
  max-height: pix-rem(1700);
  @include media(1220px) {
    top: pix-rem(-260);
  }
}

.pricing .CTA {
  width: 80%;
  display: flex;
  flex-direction: column;
  text-align: center;
  margin: 6rem auto;
}

.pricing .CTA .CTAs {
  display: flex;
  gap: 1.125rem;
  margin: 3rem auto;
  background-color: #e6f0ff;
  padding: 1rem;
}
.pricing .CTA .CTAs .ctaMonth,
.pricing .CTA .CTAs .ctaYear {
  text-decoration: none;
  padding-block: 1rem;
  padding-inline: 1rem;
  border-radius: 0.25rem;
  width: 7.75rem;
  text-align: center;
}
.pricing .CTA .CTAs .ctaMonth {
  border: 0.0625rem solid #006cff;
  color: #006cff;
}
.pricing .CTA .CTAs .ctaMonth:active {
  color: #004cb3;
  border: 0.0625rem solid #004cb3;
}
.pricing .CTA .CTAs .ctaYear {
  background-color: #004db5;
  color: white;
}
.pricing .CTA .CTAs .ctaStarter:active {
  background-color: #004cb3;
}
.pricing .CTAtitle {
  font-size: 2rem;
}
.pricing .Featurestitle {
  font-size: 2rem;
  text-align: center;
  padding-block: 2rem;
}

.pricing .plans {
  display: flex;
  gap: 23px;
  width: min(100%, 75.25rem);
  margin-inline: auto;
  @include media(1220px) {
    width: pix-rem(390);
    margin-inline: auto;
    flex-direction: column;
    justify-content: center;
  }

  @include media(420px) {
    width: 100%;
  }
}

.plansCard {
  flex: 1;
  background-color: #e6f0ff;
  color: #3f3f3f;
  padding: 2rem;
  border-radius: 1.5rem;
  border: 0.89px solid #002f49;
}

.FtnBtn {
  height: 19rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.plansCard.enterprise {
  background-color: #002f49;
  color: #fff;
}
.plansCard.enterprise p {
  color: #fff;
}

.plansCardIcon {
  width: 26px;
}
.plansCard p {
  color: #454545;
  font-size: 1rem;
}

.plansCardTitle,
.plansPricingFigure,
.pricingFeaturesItem {
  display: flex;
  align-items: center;
}
.plansPricingCurrency {
  width: 3.125rem;
}
.pricingFeaturesItem img,
.plansCardIcon {
  padding-right: 11px;
}
.plansPricingFigure h4 {
  font-size: 4.5rem;
  font-weight: 600;
}
.pricing .features {
  margin-block: 4rem;
  width: min(100%, 75.25rem);
  margin-inline: auto;
}

.pricingFeatures {
  padding: 1.5rem 0;
}
.plansCard a {
  display: block;
  color: #fff;
  text-align: center;
  font-size: 1rem;
  padding: 1rem 2rem;
  margin-top: 2rem;
  background-color: #006cff;
  border-radius: 4px;
}
table {
  border-collapse: collapse;
  width: 100%;
  padding-block: 2rem;
  width: 95%;
  margin-inline: auto;
  overflow-x: auto;
  @include media(1220px) {
    width: pix-rem(1024);
  }
}
thead {
  background-color: #005584;
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
}
th,
td {
  padding: 0.75rem;
}
tr th:first-child {
  text-align: left;
}
tr td:first-child {
  text-align: left;
}
tr img {
  margin-inline: auto;
}

.pricing .benefits {
  padding: 32px;
  background-color: #e6f6ff;
  border-radius: 1rem;
  display: flex;
  gap: 30px;
  margin: 6rem auto;
  width: min(100%, 75.25rem);
  @include media(1220px) {
    margin-inline: auto;
    flex-direction: column-reverse;
    justify-content: center;
  }
}

.pricing .benefits .benefitdescription {
  flex: 1;
}
.pricing .benefits .BenefitsImage {
  flex: 1;
}
.pricing .benefits .BenefitsImage img {
  width: 100%;
}

.pricing .benefits ul li {
  font-size: 1.25rem;
  font-weight: 300;
  padding-bottom: 10px;
  color: #454545;
}
.pricing .benefits ul li span {
  color: #454545;
  padding-right: 10px;
}

.pricing .benefits .benefitCTA {
  display: flex;
  margin-top: 2rem;
  @include media(1220px) {
    width: 50%;
    margin-inline: auto;
    flex-direction: column;
    justify-content: center;
  }
  @include media(520px) {
    width: 100%;
  }
}
.pricing .benefits .benefitCTA a {
  text-decoration: none;
  padding-block: 1rem;
  padding-inline: 1rem;
  border: 1px solid #006cff;
  border-radius: 0.25rem;
  text-align: center;
  margin-right: 2rem;
  @include media(1220px) {
    margin-block: pix-rem(20);
  }
  @include media(460px) {
    width: 50%;
    margin-inline: auto;
  }
}

.pricing .benefits .benefitCTA a:first-child {
  background-color: #006cff;
  color: #fff;
}

